src/components/Analytics/style.scss
@import '../../styles/_main';

.Analytics {
  position: relative;
  background-color: $c_black;

  &__container {
    display: flex;
    flex-wrap: wrap;
    padding: 20px 0 60px;
    border-radius: $border-radius;

    & > * {
      flex-basis: calc(100% / 2);
    }
  }

  &__content {
    position: absolute;
    bottom: 0;
    left: 50%;
    width: 100%;
    transform: translate(-50%, 50%);
  }

  @media #{$screen-sm} {
    &__container {
      padding-right: 20px;
      padding-left: 20px;

      & > * {
        flex-basis: calc(100% / 3);
      }
    }

    &__content {
      width: auto;
    }
  }

  @media #{$screen-md} {
    &__container {
      & > * {
        flex-basis: calc(100% / 4);
      }
    }
  }
}

